Diseñando la interfaz de los botones play y stop

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:pointerIcon="top_right_diagonal_double_arrow"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -19,27 +20,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Anterior" />
+            app:icon="@drawable/baseline_skip_previous_48"
+            app:iconGravity="textEnd" />
 
         <Button
             android:id="@+id/stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Stop" />
+            app:icon="@drawable/baseline_stop_48"
+            app:iconGravity="textEnd" />
 
         <Button
             android:id="@+id/play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Play" />
+            app:icon="@drawable/baseline_play_arrow_48"
+            app:iconGravity="textEnd" />
 
         <Button
             android:id="@+id/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Siguiente" />
+            app:icon="@drawable/baseline_skip_next_48"
+            app:iconGravity="textEnd" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
